@@ -1,17 +1,15 @@
 package org.schoellerfamily.gedbrowser.api.controller;
 
-import java.util.Collections;
+import java.util.List;
 
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponse;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.schoellerfamily.gedbrowser.api.controller.exception.DataSetNotFoundException;
 import org.schoellerfamily.gedbrowser.datamodel.Root;
 import org.schoellerfamily.gedbrowser.persistence.domain.RootDocument;
 import org.schoellerfamily.gedbrowser.persistence.mongo.loader.GedDocumentFileLoader;
+import org.schoellerfamily.gedbrowser.persistence.mongo.repository.RepositoryManagerMongo;
 import org.schoellerfamily.gedbrowser.writer.GedWriter;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -22,6 +20,9 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.ResponseBody;
 
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
 /**
  * Emits GEDCOM to the HTTP connection to download the GEDCOM state.
  *
@@ -30,13 +31,14 @@ import org.springframework.web.bind.annotation.ResponseBody;
 @CrossOrigin(origins = {
         "http://largo.schoellerfamily.org:4200", "http://localhost:4200" })
 @Controller
+@RequiredArgsConstructor
+@Slf4j
 public class SaveController {
-    /** Logger. */
-    private final transient Log logger = LogFactory.getLog(getClass());
 
     /** */
-    @Autowired
-    private transient GedDocumentFileLoader loader;
+    private final GedDocumentFileLoader loader;
+
+    private final RepositoryManagerMongo repositoryManager;
 
     /**
      * Connects HTML template file with data for saving the GEDCOM file.
@@ -50,26 +52,25 @@ public class SaveController {
     @ResponseBody
     public final ResponseEntity<String> save(@PathVariable final String db,
             final HttpServletResponse response) {
-        logger.info("Starting save");
+        log.info("Starting save");
         // check here whether authorized.
         try {
             final Root root = fetchRoot(db);
 
             final String contents = new GedWriter(root).writeString();
             final String filename = db + ".ged";
-            logger.info("filename: " + filename);
+            log.info("filename: {}", filename);
             final HttpHeaders headers = new HttpHeaders();
-            headers.setAccessControlExposeHeaders(
-                    Collections.singletonList("Content-Disposition"));
+            headers.setAccessControlExposeHeaders(List.of("Content-Disposition"));
             headers.set(
                     "Content-Disposition", "attachment; filename=" + filename);
             headers.setContentType(MediaType.TEXT_PLAIN);
-            logger.info("Exiting save");
+            log.info("Exiting save");
             return new ResponseEntity<>(contents, headers, HttpStatus.OK);
         } catch (DataSetNotFoundException e) {
             final HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.TEXT_PLAIN);
-            logger.info("Exiting save");
+            log.info("Exiting save");
             return new ResponseEntity<>(
                     e.getMessage(), headers, HttpStatus.NOT_FOUND);
         }
@@ -80,10 +81,9 @@ public class SaveController {
      * @return the root object
      */
     protected final Root fetchRoot(final String dbName) {
-        final RootDocument rootDocument = loader.loadDocument(dbName);
+        final RootDocument rootDocument = loader.loadDocument(repositoryManager, dbName);
         if (rootDocument == null) {
-            throw new DataSetNotFoundException(
-                    "Data set " + dbName + " not found", dbName);
+            throw new DataSetNotFoundException("Data set %s not found".formatted(dbName), dbName);
         }
         return rootDocument.getGedObject();
     }
